<resources>
    <string name="app_name">RecLeague</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="facebook_button">Continue with Facebook</string>
    <string name="google_button">Continue with Google</string>
    <string name="recleague_logo_description">RecLeague Logo</string>
    <string name="facebook_app_id">118468635370585</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_game">New Game</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="player_limit">Player Limit</string>
    <string name="location">Location</string>
    <string name="post_game">Post Game</string>
    <string name="spinner_default_text">Demo</string>
    <string name="find_game">Find Game</string>
    <string name="open_post_game">Can\'t find the game for you? Post your own!</string>
    <string name="my_games">My Games</string>
    <string name="default_user_name">Nickname</string>
    <string name="nickname">Nickname</string>
    <string name="enter_nickname_default">Enter Nickname</string>
    <string name="nickname_default_hint">Nickname</string>
    <string name="nickname_default_val">Nickname</string>
    <string name="email">Email</string>
    <string name="rating">Rating</string>
    <string name="bio">Bio</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="name_output">Name</string>
    <string name="game_details">Game Details</string>
    <string name="date">Date</string>
    <string name="sport">Sport</string>
    <string name="loading">Loading...</string>
    <string name="join">Join</string>
    <string name="owner">Owner</string>
    <string name="post_games">Post Games</string>
    <string name="find_games">Find Games</string>
    <string name="user_games">User Games</string>
    <string name="user_profile">User Profile</string>
    <string name="title_activity_location_chooser">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="get_from_maps">Get from Maps</string>
    <string name="find_in_maps">Find in Maps</string>
    <string name="default_distance">1 mile</string>
    <string name="max_distance">Any Distance</string>
</resources>
