<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.recleague.ViewGame">

    <TextView android:id="@+id/tv_game_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"

        android:text="@string/game_details"
        android:textSize="30sp"
        android:textColor="#FFFFFF"

        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        android:layout_marginBottom="10dp"/>

    <LinearLayout android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_game_details"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp">

        <TextView android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/date"
            android:textSize="30sp"

            android:layout_marginBottom="3dp"

            android:visibility="invisible"/>

        <TextView android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:text="@string/date"
            android:textSize="18sp"

            android:visibility="invisible"/>

        <View android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"

            android:visibility="invisible"/>

        <TextView android:id="@+id/tv_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/sport"
            android:textSize="30sp"

            android:layout_marginBottom="3dp"

            android:visibility="invisible"/>

        <TextView android:id="@+id/sport_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:text="@string/sport"
            android:textSize="18sp"

            android:visibility="invisible"/>

        <View android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"

            android:visibility="invisible"/>

        <TextView android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/location"
            android:textSize="30sp"

            android:layout_marginBottom="3dp"

            android:visibility="invisible"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button android:id="@+id/open_maps"
                android:layout_width="150dp"
                android:layout_height="39dp"

                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:text="@string/find_in_maps"
                android:textColor="#FFFFFF"
                android:textSize="15sp"

                android:background="@drawable/button_shape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"

                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"

                android:onClick="openMaps"

                android:visibility="invisible"/>

            <TextView android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"

                android:layout_centerVertical="true"

                android:text="@string/location"
                android:textSize="18sp"

                android:visibility="invisible"/>

        </RelativeLayout>

        <View android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"

            android:visibility="invisible"/>

        <TextView android:id="@+id/tv_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/player_limit"
            android:textSize="30sp"

            android:layout_marginBottom="3dp"

            android:visibility="invisible"/>

        <TextView android:id="@+id/lim_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:text="@string/player_limit"
            android:textSize="18sp"

            android:visibility="invisible"/>

        <View android:id="@+id/line4"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"

            android:visibility="invisible"/>

        <TextView android:id="@+id/tv_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/owner"
            android:textSize="30sp"

            android:layout_marginBottom="3dp"

            android:visibility="invisible"/>

        <TextView android:id="@+id/owner_text"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:text="@string/owner"
            android:textSize="18sp"

            android:visibility="invisible"/>

        <Spinner android:id="@+id/signeup"
            android:layout_width="wrap_content"
            android:layout_height="50dp"

            android:background="@color/background">
        </Spinner>

    </LinearLayout>

        <TextView android:id="@+id/load_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/loading"
            android:textSize="30sp"

            android:layout_centerInParent="true" />


        <Button android:id="@+id/jorl_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"

            android:text="@string/join"
            android:textColor="#FFFFFF"
            android:textSize="15sp"

            android:onClick="joinorleave"

            android:background="@drawable/button_shape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:visibility="visible" />


</RelativeLayout>
