<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.recleague.ViewUserProfile">

    <TextView android:id="@+id/nickname_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"

        android:text="@string/default_user_name"
        android:textSize="30sp"
        android:textColor="#FFFFFF"

        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nickname_output"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp">

        <TextView android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/nickname"
            android:textSize="25sp"

            android:layout_marginBottom="3dp"

            android:onClick="openAlert"/>

        <TextView android:id="@+id/tv_nickname_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/nickname_default_val"
            android:textSize="18sp" />

        <View android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"/>


        <TextView android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/email"
            android:textSize="25sp"

            android:layout_marginBottom="3dp"

            android:onClick="openAlert"/>

        <TextView android:id="@+id/tv_email_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/email"
            android:textSize="18sp"/>

        <View android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="10dp"/>


        <TextView android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/rating"
            android:textSize="25sp"

            android:layout_marginBottom="3dp"

            android:onClick="openAlert"/>

        <TextView android:id="@+id/tv_rating_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/rating"
            android:textSize="18sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/save_button"
            android:onClick="change"



            />

        <RatingBar
            android:layout_below="@+id/ev_bio"
            android:layout_marginTop="10dp" android:layout_marginBottom="10dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:clickable="true"
            android:id="@+id/dialog_ratingbar"
            android:layout_gravity="center"
            android:numStars="5" android:stepSize="0.5" android:rating="0.5"
            android:isIndicator="false"/>

    </LinearLayout>

</RelativeLayout>